Update Plotting Basics Assignment.ipynb

--- a/Plotting Basics Assignment.ipynb
+++ b/Plotting Basics Assignment.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('Thinkful_Data\\climate_1991_2016_USA.csv')"
+    "data = pd.read_csv('climate_1991_2016_USA.csv')"
    ]
   },
   {
