Update Plotting Basics Assignment.ipynb

--- a/Plotting Basics Assignment.ipynb
+++ b/Plotting Basics Assignment.ipynb
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create new DataFrame with monthly averages to yearly averages\n",
+    "#create new DataFrame with monthly averages converted to yearly averages\n",
     "\n",
     "yearly_data = pd.DataFrame()\n",
     "year = []\n",
